--- a/Chat.App/src/app/navigation-bar/navigation-bar.component.html
+++ b/Chat.App/src/app/navigation-bar/navigation-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white shadow-sm mb-3">
+<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light nav-bg">
     <div class="container-fluid">
       <a class="navbar-brand" href="">Chat</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" routerLink="/chat">Chats</a>
+            <a class="nav-link" routerLink="/rooms">Chats</a>
           </li>
         </ul>
 
