--- a/Chat.App/src/app/rooms/rooms/room/received-message/received-message.component.html
+++ b/Chat.App/src/app/rooms/rooms/room/received-message/received-message.component.html
@@ -1,8 +1,19 @@
 <div class="media w-75 mb-1">
     <div class="media-body ml-3">
-      <div class="bg-light rounded py-2 px-3 mb-1">
-        <p class="text-small mb-0 text-muted">{{message.text}}</p>
+      <div id="message-{{message.id}}" class="bg-light rounded py-2 px-3 mb-1 transition">
+        <div class="d-flex text-reply" *ngIf="this.message.repliedTo" style="cursor: pointer;"
+            (click)="managingMessagesService.toMessage(message.repliedTo.id)">
+          <i class="fa-solid fa-reply mt-1"></i>
+          <p class="mb-0 mx-2 reply-length reply-length">{{this.message.repliedTo.text}}</p>
+        </div>
+        <p class="text-small mb-0 text-muted">{{this.message.text}}</p>
       </div>
-      <p class="small text-muted mb-0">{{getTime()}} | {{message.sender.name}}</p>
+      <div class="d-flex flex-row justify-content-between">
+        <p class="small text-muted mb-0">{{getTime()}} | {{message.sender.name}}</p>
+        <nav class="d-flex flex-row small text-muted mb-1">
+          <a (click)="managingMessagesService.reply(this.message)" class="link-secondary nav-link p-0"
+              style="cursor: pointer;">Reply</a>
+        </nav>
+      </div>
     </div>
 </div>
