--- a/Chat.App/src/styles.css
+++ b/Chat.App/src/styles.css
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+.highlight{
+    background-color: #a6c9ff!important;
+}
+
+.transition{
+    transition: 0.5s;
+}
+
+.reply-length{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 75ch;
+}
