--- a/Chat.App/src/app/rooms/rooms/room/send-message/send-message.component.html
+++ b/Chat.App/src/app/rooms/rooms/room/send-message/send-message.component.html
@@ -10,6 +10,19 @@
       <i class="fa-solid fa-xmark text-danger m-0 fa-lg"></i>
     </button>
   </div>
+
+  <div class="bg-secondary-message p-3 d-flex justify-content-between" *ngIf="this.managingMessages.inPersonMessage?.id">
+    <div class="d-flex ">
+      <i class="fa-solid fa-lock text-primary mt-1"></i>
+      <p class="mb-0 mx-2 text-muted reply-length">
+        {{this.managingMessages.inPersonMessage.text}}
+      </p>
+    </div>
+    <button class="btn btn-link p-0" style="height: 20px;" (click)="this.managingMessages.cancelReplyInPerson()">
+      <i class="fa-solid fa-xmark text-danger m-0 fa-lg"></i>
+    </button>
+  </div>
+
   <form class="bg-light" (ngSubmit)="this.managingMessages.send()" #form="ngForm">
       <div class="input-group">
         <input type="text" [(ngModel)]="this.managingMessages.message.text" placeholder="Type a message" name="text"
