--- a/Chat.App/src/app/rooms/rooms/rooms.component.html
+++ b/Chat.App/src/app/rooms/rooms/rooms.component.html
@@ -7,8 +7,7 @@
             </div>
         </div>
     </section>
-    <section class="col d-flex flex-column justify-content-between" style="padding-right: 0; padding-left: 0;">
+    <section class="col" style="padding-right: 0; padding-left: 0;">
         <router-outlet></router-outlet>
-        <app-send-message></app-send-message>
     </section>
 </div>
