Added Group Creation on client side. Some changes to API after tests.

--- a/Chat.App/src/app/rooms/rooms/rooms.component.css
+++ b/Chat.App/src/app/rooms/rooms/rooms.component.css
@@ -19,7 +19,7 @@
   }
   
   .messages-box {
-    height: calc(100vh - 56px);
+    height: calc(100vh - 56px - 72px);
     overflow-y: scroll;
   }
   
