--- a/Chat.App/src/app/rooms/rooms/room/room.component.html
+++ b/Chat.App/src/app/rooms/rooms/room/room.component.html
@@ -1,4 +1,12 @@
 <section class="d-flex flex-column justify-content-between">
+  <div class="bg-white d-flex p-2 px-3 border-bottom justify-content-between">
+    <h5 class="text-primary m-1">{{room?.displayName ?? roomName}}</h5>
+    <div class="text-small text-muted d-flex"  style="cursor: pointer;"
+        (click)="roomsService.openUsersInGroupDialog(room.users)">
+      <i class="fa-sm fa-solid fa-user-group m-auto"></i>
+      <p class="ms-2 m-auto">{{room.users.length}}</p>
+    </div>
+  </div>
   <div class="px-4 pt-4 pb-2 chat-box bg-white d-flex flex-column-reverse" 
       [ngClass]="{ 'chat-box-reply': managingMessages.replyMessage.id || managingMessages.inPersonMessage.id }">
     <div *ngFor="let m of signalrService.messages" [ngSwitch]="m?.sender?.name">
