--- a/Chat.App/src/app/rooms/rooms/rooms.component.html
+++ b/Chat.App/src/app/rooms/rooms/rooms.component.html
@@ -17,7 +17,7 @@
                     <i class="fa-sm fa-solid fa-user-group text-white"></i>
                     New Group
                 </button>
-                <button class="btn btn-primary mx-1">
+                <button class="btn btn-primary mx-1" (click)="this.roomsService.openDialogueDialog()">
                     <i class="fa-sm fa-solid fa-lock text-white"></i>
                     New Dialogue
                 </button>
