--- a/Chat.App/src/app/rooms/rooms/room/received-message/received-message.component.html
+++ b/Chat.App/src/app/rooms/rooms/room/received-message/received-message.component.html
@@ -1,4 +1,4 @@
-<div class="media w-75 mb-1">
+<div class="media mb-1" style="width: fit-content; max-width: 75%;">
     <div class="media-body ml-3">
       <div id="message-{{message.id}}" class="bg-light rounded py-2 px-3 mb-1 transition">
         <div class="d-flex text-reply" *ngIf="this.message.repliedTo" style="cursor: pointer;"
@@ -9,7 +9,7 @@
         <p class="text-small mb-0 text-muted">{{this.message.text}}</p>
       </div>
       <div class="d-flex flex-row justify-content-between">
-        <p class="small text-muted mb-0">{{getTime()}} | {{message.sender.name}}</p>
+        <p class="small text-muted mb-0 me-5">{{getTime()}} | {{message.sender.name}}</p>
         <nav class="d-flex flex-row small text-muted mb-1">
           <a (click)="managingMessagesService.replyInPerson(this.message)" class="link-secondary nav-link p-0"
               style="cursor: pointer;">Reply in person</a>
