Implemented  Add Member to Group functionality. Testes. Minor Changes to API.

--- a/Chat.App/src/app/rooms/rooms/users-in-group/users-in-group.component.html
+++ b/Chat.App/src/app/rooms/rooms/users-in-group/users-in-group.component.html
@@ -4,5 +4,14 @@
             {{u.name}} - <span class="text-muted">{{u.email}}</span>
         </div>
     </div>
+    <div class="input-group">
+        <input type="email" [(ngModel)]="this.email" name="email" placeholder="Type an email"
+            class="form-control bg-light mb-3" (keydown)="this.error = ''"/>
+        <button type="button" class="btn btn-primary" style="height: 38px;" (click)="onSubmit()"
+            [disabled]="!this.email">
+            Add User
+        </button>
+    </div>
+    <p class="text-danger">{{this.error}}</p>
     <button mat-button mat-dialog-close class="m-auto">Close</button>
 </div>
