--- a/Chat.App/src/app/rooms/rooms/room/room.component.html
+++ b/Chat.App/src/app/rooms/rooms/room/room.component.html
@@ -1,11 +1,12 @@
 <section class="d-flex flex-column justify-content-between">
   <div class="bg-white d-flex p-2 px-3 border-bottom justify-content-between">
-    <h5 class="text-primary m-1">{{room?.displayName ?? roomName}}</h5>
-    <div class="text-small text-muted d-flex"  style="cursor: pointer;"
-        (click)="roomsService.openUsersInGroupDialog(room.users)">
+    <h5 class="text-primary m-1">{{room?.displayName ?? secondUser?.name}}</h5>
+    <div *ngIf="room?.displayName" class="text-small text-muted d-flex"  style="cursor: pointer;"
+        (click)="roomsService.openUsersInGroupDialog(room.users, room.id)">
       <i class="fa-sm fa-solid fa-user-group m-auto"></i>
       <p class="ms-2 m-auto">{{room.users.length}}</p>
     </div>
+    <p *ngIf="!room?.displayName" class="text-muted my-auto">{{secondUser?.email}}</p>
   </div>
   <div class="px-4 pt-4 pb-2 chat-box bg-white d-flex flex-column" id="scroll" 
       infinite-scroll [scrollWindow]="false" (scrolledUp)="loadNext()"
