Added infinite scroll to rooms list.

--- a/Chat.App/src/app/account/register/register.component.html
+++ b/Chat.App/src/app/account/register/register.component.html
@@ -21,7 +21,7 @@
 
             <div class="form-outline mb-3">
               <input type="password" id="password" class="form-control form-control-lg" name="password"
-                placeholder="Enter password" [(ngModel)]="user.password" minlength="6" required/>
+                placeholder="Enter password" [(ngModel)]="user.password" required/>
               <label class="form-label" for="password">Password</label>
             </div>
   
